makes base sepolia default chain

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "eslint",
     "compile": "HOME=/tmp/hhhome npx hardhat build",
-    "deploy": "HOME=/tmp/hhhome npx hardhat ignition deploy ignition/modules/Counter.ts --network bscTestnet"
+    "deploy": "HOME=/tmp/hhhome npx hardhat ignition deploy ignition/modules/Counter.ts --network baseSepolia"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
