--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "hardhat": "^3.0.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@openzeppelin/contracts": "^5.1.0"
   }
 }
