feat: adds nebula testnet

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint",
     "compile": "HOME=/tmp/hhhome npx hardhat build",
     "deploy": "HOME=/tmp/hhhome npx hardhat ignition deploy ignition/modules/Counter.ts --network baseSepolia",
-    "deploy:taiko": "HOME=/tmp/hhhome npx hardhat ignition deploy ignition/modules/Counter.ts --network taikoHoodi"
+    "deploy:nebulas": "HOME=/tmp/hhhome npx hardhat ignition deploy ignition/modules/Counter.ts --network nebulas"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
