--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy:nebulas": "HOME=/tmp/hhhome npx hardhat ignition deploy ignition/modules/Counter.ts --network nebulas"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.15.1",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.13.2",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
+    "@openzeppelin/contracts": "^5.1.0",
     "@shadcn/ui": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -42,7 +44,6 @@
     "hardhat": "^3.0.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5",
-    "@openzeppelin/contracts": "^5.1.0"
+    "typescript": "^5"
   }
 }
